Some improvements over performance and usability
feat: Issue list performance improvements (OD-2042)
feat: Add criteria to query project by id (OD-2041)